ets price and other changes